--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">One Click</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+
+    <string name="title_auto_refresh_usage">Auto refresh usage</string>
+    <string name="summary_auto_refresh_usage">Automatically update usage when logging in</string>
+    <string name="key_auto_refresh_usage">com.minosai.oneclick.prefs.autoRefreshUsage</string>
 </resources>
